--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
 		"js/promise.min_83a6a5d.js"
 	],
 	"game": [
-		"js/default.thm_85eba358.js",
-		"js/main.min_1d8355c8.js"
+		"js/default.thm_d28527bb.js",
+		"js/main.min_672731da.js"
 	]
 }
