--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
 		"js/promise.min_83a6a5d.js"
 	],
 	"game": [
-		"js/default.thm_d28527bb.js",
-		"js/main.min_672731da.js"
+		"js/default.thm_88a6e2fb.js",
+		"js/main.min_7a8dce83.js"
 	]
 }
